adding channel fix
