# backend/src/app.js
@@ -52,6 +52,8 @@ app.post('/v0/workspaceslist', user.createWorkspace);
 
 app.put('/v0/userworkspaces', user.joinWorkspace);
 
+app.get('/v0/workspaceadmins/:ws', user.getWorkspaceAdmins);
+
 
 app.get('/v0/data', user.getActiveDms);            //unf
 app.get('/v0/data', user.getAllDms);               //unf
